--- a/DroneLander/DroneLander/DroneLander/MainPage.xaml
+++ b/DroneLander/DroneLander/DroneLander/MainPage.xaml
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             Title="Drone Lander"
-             BackgroundImageSource="drone_lander_back.jpg"
-             x:Class="DroneLander.MainPage">
+<views:BaseContentPage 
+    x:TypeArguments="viewModels:MainViewModel" 
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:views="clr-namespace:CafeLib.Mobile.Views;assembly=CafeLib.Mobile"
+    xmlns:viewModels="clr-namespace:DroneLander.ViewModels;assembly=DroneLander"
+    Title="Drone Lander"
+    BackgroundImageSource="drone_lander_back.jpg"
+    x:Class="DroneLander.MainPage">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -30,4 +34,4 @@
 
         <Button Style="{DynamicResource ButtonLabelStyle}" Grid.Row="1" VerticalOptions="Fill" Text="{Binding ActionLabel}" Command="{Binding AttemptLandingCommand}" />
     </Grid>
-</ContentPage>
+</views:BaseContentPage>
