--- a/MvvmDemo/MvvmDemo/MvvmDemo/Views/PlaylistDetailPage.xaml
+++ b/MvvmDemo/MvvmDemo/MvvmDemo/Views/PlaylistDetailPage.xaml
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MvvmDemo.Views.PlaylistDetailPage"
-             Title="{Binding Title}">
+<views:BaseContentPage
+    x:TypeArguments="viewModels:PlaylistDetailViewModel" 
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:views="clr-namespace:CafeLib.Mobile.Views;assembly=CafeLib.Mobile"
+    xmlns:viewModels="clr-namespace:MvvmDemo.ViewModels;assembly=MvvmDemo"
+    x:Class="MvvmDemo.Views.PlaylistDetailPage"
+    Title="{Binding Title}">
     <Label x:Name="DetailTitle" Text="{Binding Title}" />
-</ContentPage>
+</views:BaseContentPage>
