--- a/MvvmDemo/MvvmDemo/MvvmDemo/Views/PlaylistsPage.xaml
+++ b/MvvmDemo/MvvmDemo/MvvmDemo/Views/PlaylistsPage.xaml
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage Title="{Binding Title}"
-             xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="MvvmDemo.Views.PlaylistsPage">
+<views:BaseContentPage 
+    Title="{Binding Title}"
+    x:TypeArguments="viewModels:PlaylistsViewModel" 
+    xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:views="clr-namespace:CafeLib.Mobile.Views;assembly=CafeLib.Mobile"
+    xmlns:viewModels="clr-namespace:MvvmDemo.ViewModels;assembly=MvvmDemo"
+    x:Class="MvvmDemo.Views.PlaylistsPage">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" 
@@ -25,4 +29,4 @@
         </ListView.ItemTemplate>
     </ListView>
 
-</ContentPage>
+</views:BaseContentPage>
