Updated DroneLander to use CafeLib.Mobile 0.8.0

--- a/DroneLander/DroneLander/DroneLander/MainPage.xaml
+++ b/DroneLander/DroneLander/DroneLander/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<views:BaseContentPage 
+<views:CafeContentPage 
     x:TypeArguments="viewModels:MainViewModel" 
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -34,4 +34,4 @@
 
         <Button Style="{DynamicResource ButtonLabelStyle}" Grid.Row="1" VerticalOptions="Fill" Text="{Binding ActionLabel}" Command="{Binding AttemptLandingCommand}" />
     </Grid>
-</views:BaseContentPage>
+</views:CafeContentPage>
